--- a/imgui.ini
+++ b/imgui.ini
@@ -24,7 +24,7 @@ Size=294,245
 Collapsed=0
 
 [Window][LFO]
-Pos=62,522
+Pos=69,446
 Size=276,58
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=221,155
 Collapsed=0
 
 [Window][NOISE]
-Pos=76,453
+Pos=81,367
 Size=227,54
 Collapsed=0
 
@@ -56,5 +56,10 @@ Collapsed=0
 [Window][VCA]
 Pos=504,570
 Size=260,100
+Collapsed=0
+
+[Window][KEYBOARD]
+Pos=36,564
+Size=398,111
 Collapsed=0
 
