--- a/imgui.ini
+++ b/imgui.ini
@@ -59,12 +59,17 @@ Size=256,100
 Collapsed=0
 
 [Window][KEYBOARD]
-Pos=47,503
-Size=1186,188
+Pos=367,488
+Size=565,165
 Collapsed=0
 
 [Window][PATCH]
 Pos=714,285
 Size=52,54
+Collapsed=0
+
+[Window][KEYBOARD CONTROL]
+Pos=62,488
+Size=298,100
 Collapsed=0
 
