--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/imgui"]
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "vendor/OpenSubdiv"]
+	path = vendor/OpenSubdiv
+	url = https://github.com/PixarAnimationStudios/OpenSubdiv
