--- a/qt/CMakeLists.txt
+++ b/qt/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
-add_library(SynthQt SHARED main.cpp QSynth.cpp qml.qrc)
+add_executable(SynthOdyssey main.cpp QSynth.cpp qml.qrc)
 
-target_compile_definitions(SynthQt
+target_compile_definitions(SynthOdyssey
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(SynthQt
-  PRIVATE Qt5::Core Qt5::Quick)
+target_link_libraries(SynthOdyssey
+  PRIVATE Qt5::Core Qt5::Quick SynthCore)
