--- a/qt/CMakeLists.txt
+++ b/qt/CMakeLists.txt
@@ -7,11 +7,11 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt5 COMPONENTS Core Quick REQUIRED)
+find_package(Qt5 COMPONENTS Core Quick Multimedia REQUIRED)
 
 add_executable(SynthOdyssey main.cpp QSynth.cpp qml.qrc)
 
 target_compile_definitions(SynthOdyssey
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(SynthOdyssey
-  PRIVATE Qt5::Core Qt5::Quick SynthCore)
+  PRIVATE Qt5::Core Qt5::Quick Qt5::Multimedia SynthCore)
