make core lib static

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(SynthCore SHARED adsr ar hpf kbd lfo mix noise sh synth vca vcf vco1 vco2)
+add_library(SynthCore STATIC adsr ar hpf kbd lfo mix noise sh synth vca vcf vco1 vco2)
