--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 project(SynthOdyssey)
 
 add_subdirectory(core)
-add_subdirectory(qt)
+add_subdirectory(ui)
 add_subdirectory(vendor/rtmidi)
