add save / save-as menu

--- a/presets.ini
+++ b/presets.ini
@@ -57,3 +57,62 @@ vco2_pwm=@Variant(\0\0\0\x87\0\0\0\0)
 vco2_pwm_is_lfo=true
 vco2_sync=false
 vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
+
+[Smooth]
+adsr_attack="@Variant(\0\0\0\x87=\x1e\x80\0)"
+adsr_decay="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+adsr_kbd_repeat=true
+adsr_kbd_trigger=true
+adsr_release="@Variant(\0\0\0\x87=Z\xb3\x33)"
+adsr_sustain=@Variant(\0\0\0\x87?\x10x\0)
+ar_attack="@Variant(\0\0\0\x87=\xac\x19\x9a)"
+ar_kbd_trigger=true
+ar_release="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+hpf_cutoff=@Variant(\0\0\0\x87\0\0\0\0)
+kbd_portamento=@Variant(\0\0\0\x87?\x80\xd6\0)
+kbd_transpose=@Variant(\0\0\0\x87\xc0\0\0\0)
+lfo_freq="@Variant(\0\0\0\x87=ye\0)"
+mix_noise=true
+mix_noise_ring=@Variant(\0\0\0\x87\0\0\0\0)
+mix_vco1=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco1_saw=true
+mix_vco2=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco2_saw=true
+noise_white=true
+sh_lag=@Variant(\0\0\0\x87\0\0\0\0)
+sh_lfo_trigger=true
+sh_noise=@Variant(\0\0\0\x87\0\0\0\0)
+sh_noise_gen=true
+sh_vco1=@Variant(\0\0\0\x87\0\0\0\0)
+sh_vco1_saw=true
+vca_env=@Variant(\0\0\0\x87@\f\xc0\0)
+vca_env_ar=true
+vca_gain=@Variant(\0\0\0\x87@\xcfR\0)
+vcf_cutoff=@Variant(\0\0\0\x87\x43\xa8x\xd4)
+vcf_env="@Variant(\0\0\0\x87>,\xa0\0)"
+vcf_env_adsr=true
+vcf_mod1=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_mod1_kbd=false
+vcf_mod2=@Variant(\0\0\0\x87>\x83|\xcd)
+vcf_mod2_sh=false
+vcf_reso=@Variant(\0\0\0\x87>L\xcc\xcd)
+vco1_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1_is_lfo_sine=true
+vco1_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm2_is_sh_out=true
+vco1_kbd=true
+vco1_pw=@Variant(\0\0\0\x87?\0\0\0)
+vco1_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_pwm_is_lfo=true
+vco1_tune=@Variant(\0\0\0\x87?\x80\0\0)
+vco2_detune=@Variant(\0\0\0\x87@H\xf5\xc3)
+vco2_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1_is_lfo_sine=true
+vco2_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm2_is_sh_out=true
+vco2_pw=@Variant(\0\0\0\x87?\0\0\0)
+vco2_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_pwm_is_lfo=true
+vco2_sync=false
+vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
