improve ADSR/AR envelopes

--- a/presets.ini
+++ b/presets.ini
@@ -58,6 +58,124 @@ vco2_pwm_is_lfo=true
 vco2_sync=false
 vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
 
+[Hum]
+adsr_attack=@Variant(\0\0\0\x87>X\xd9\x9a)
+adsr_decay=@Variant(\0\0\0\x87>X\x86\x66)
+adsr_kbd_repeat=true
+adsr_kbd_trigger=true
+adsr_release=@Variant(\0\0\0\x87>^\xf9\x9a)
+adsr_sustain=@Variant(\0\0\0\x87>\xf7\x9c\xcd)
+ar_attack=@Variant(\0\0\0\x87\0\0\0\0)
+ar_kbd_trigger=true
+ar_release=@Variant(\0\0\0\x87\0\0\0\0)
+hpf_cutoff=@Variant(\0\0\0\x87\0\0\0\0)
+kbd_portamento=@Variant(\0\0\0\x87?\0\0\0)
+kbd_transpose=@Variant(\0\0\0\x87\xc0\0\0\0)
+lfo_freq=@Variant(\0\0\0\x87?g\xff`)
+mix_noise=true
+mix_noise_ring=@Variant(\0\0\0\x87\0\0\0\0)
+mix_vco1=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco1_saw=false
+mix_vco2=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco2_saw=false
+noise_white=true
+sh_lag=@Variant(\0\0\0\x87\0\0\0\0)
+sh_lfo_trigger=true
+sh_noise=@Variant(\0\0\0\x87\0\0\0\0)
+sh_noise_gen=true
+sh_vco1=@Variant(\0\0\0\x87\0\0\0\0)
+sh_vco1_saw=true
+vca_env=@Variant(\0\0\0\x87\x41 \0\0)
+vca_env_ar=false
+vca_gain=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_cutoff=@Variant(\0\0\0\x87\x43\xf4\xa8\x88)
+vcf_env=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_env_adsr=true
+vcf_mod1=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_mod1_kbd=false
+vcf_mod2=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_mod2_sh=false
+vcf_reso="@Variant(\0\0\0\x87=\xb8\xae )"
+vco1_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1_is_lfo_sine=true
+vco1_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm2_is_sh_out=true
+vco1_kbd=true
+vco1_pw=@Variant(\0\0\0\x87>\xa1i\x9a)
+vco1_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_pwm_is_lfo=true
+vco1_tune=@Variant(\0\0\0\x87?\x80\0\0)
+vco2_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1_is_lfo_sine=true
+vco2_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm2_is_sh_out=true
+vco2_pw=@Variant(\0\0\0\x87>\x8b\xc6\x66)
+vco2_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_pwm_is_lfo=true
+vco2_sync=false
+vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
+
+[Intro]
+adsr_attack=@Variant(\0\0\0\x87\0\0\0\0)
+adsr_decay="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+adsr_kbd_repeat=true
+adsr_kbd_trigger=true
+adsr_release=@Variant(\0\0\0\x87\0\0\0\0)
+adsr_sustain=@Variant(\0\0\0\x87>\x91\x96\x66)
+ar_attack=@Variant(\0\0\0\x87\0\0\0\0)
+ar_kbd_trigger=true
+ar_release="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+hpf_cutoff=@Variant(\0\0\0\x87\0\0\0\0)
+kbd_portamento=@Variant(\0\0\0\x87?\0\0\0)
+kbd_transpose=@Variant(\0\0\0\x87\xbf\x80\0\0)
+lfo_freq="@Variant(\0\0\0\x87=\xb1\x95N)"
+mix_noise=false
+mix_noise_ring=@Variant(\0\0\0\x87?\x12\v3)
+mix_vco1=@Variant(\0\0\0\x87>\xc1#3)
+mix_vco1_saw=true
+mix_vco2=@Variant(\0\0\0\x87?\f\x9b\x33)
+mix_vco2_saw=true
+noise_white=true
+sh_lag=@Variant(\0\0\0\x87\0\0\0\0)
+sh_lfo_trigger=false
+sh_noise=@Variant(\0\0\0\x87\0\0\0\0)
+sh_noise_gen=true
+sh_vco1=@Variant(\0\0\0\x87>\xab\xb0\0)
+sh_vco1_saw=true
+vca_env=@Variant(\0\0\0\x87\0\0\0\0)
+vca_env_ar=true
+vca_gain=@Variant(\0\0\0\x87@\xec\x98\0)
+vcf_cutoff=@Variant(\0\0\0\x87\x44\x17\xd3n)
+vcf_env=@Variant(\0\0\0\x87?X\xd0\0)
+vcf_env_adsr=false
+vcf_mod1=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_mod1_kbd=false
+vcf_mod2="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+vcf_mod2_sh=false
+vcf_reso=@Variant(\0\0\0\x87>\x8at\x88)
+vco1_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1_is_lfo_sine=true
+vco1_fm2=@Variant(\0\0\0\x87?\b\xc3\x33)
+vco1_fm2_is_sh_out=true
+vco1_kbd=true
+vco1_pw=@Variant(\0\0\0\x87?\0\0\0)
+vco1_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_pwm_is_lfo=true
+vco1_tune=@Variant(\0\0\0\x87?\x80\0\0)
+vco2_detune=@Variant(\0\0\0\x87@H\xf5\xc3)
+vco2_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1_is_lfo_sine=false
+vco2_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm2_is_sh_out=true
+vco2_pw=@Variant(\0\0\0\x87?\0\0\0)
+vco2_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_pwm_is_lfo=true
+vco2_sync=false
+vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
+
 [Smooth]
 adsr_attack="@Variant(\0\0\0\x87=\x1e\x80\0)"
 adsr_decay="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
