fix detune for high freqs

--- a/presets.ini
+++ b/presets.ini
@@ -47,7 +47,7 @@ vco1_pw=@Variant(\0\0\0\x87?\0\0\0)
 vco1_pwm=@Variant(\0\0\0\x87\0\0\0\0)
 vco1_pwm_is_lfo=true
 vco1_tune=@Variant(\0\0\0\x87?\x80\0\0)
-vco2_detune=@Variant(\0\0\0\x87@H\xf5\xc3)
+vco2_detune="@Variant(\0\0\0\x87=)h\x10)"
 vco2_fm1=@Variant(\0\0\0\x87\0\0\0\0)
 vco2_fm1_is_lfo_sine=true
 vco2_fm2=@Variant(\0\0\0\x87\0\0\0\0)
