add stereo output

--- a/presets.ini
+++ b/presets.ini
@@ -3,16 +3,16 @@ adsr_attack=@Variant(\0\0\0\x87\0\0\0\0)
 adsr_decay="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
 adsr_kbd_repeat=true
 adsr_kbd_trigger=true
-adsr_release=@Variant(\0\0\0\x87\0\0\0\0)
+adsr_release=@Variant(\0\0\0\x87>ZY\x9a)
 adsr_sustain=@Variant(\0\0\0\x87>L\xcc\xcd)
 ar_attack=@Variant(\0\0\0\x87\0\0\0\0)
 ar_kbd_trigger=true
-ar_release="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
+ar_release=@Variant(\0\0\0\x87?\x80\0\0)
 hpf_cutoff=@Variant(\0\0\0\x87\0\0\0\0)
 kbd_portamento=@Variant(\0\0\0\x87?\0\0\0)
 kbd_sequencer=true
 kbd_transpose=@Variant(\0\0\0\x87\xc0\0\0\0)
-lfo_freq=@Variant(\0\0\0\x87@H\xf5\xc3)
+lfo_freq="@Variant(\0\0\0\x87=\x9al\xa8)"
 mix_noise=true
 mix_noise_ring=@Variant(\0\0\0\x87\0\0\0\0)
 mix_vco1=@Variant(\0\0\0\x87?\x80\0\0)
@@ -29,7 +29,7 @@ sh_vco1_saw=true
 vca_env=@Variant(\0\0\0\x87@\xa0\0\0)
 vca_env_ar=true
 vca_gain=@Variant(\0\0\0\x87\0\0\0\0)
-vcf_cutoff=@Variant(\0\0\0\x87\x45\x9c@\0)
+vcf_cutoff=@Variant(\0\0\0\x87\x45_3Q)
 vcf_env=@Variant(\0\0\0\x87?fff)
 vcf_env_adsr=true
 vcf_mod1=@Variant(\0\0\0\x87\0\0\0\0)
