add original arp preset

--- a/presets.ini
+++ b/presets.ini
@@ -176,6 +176,65 @@ vco2_pwm_is_lfo=true
 vco2_sync=false
 vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
 
+[Original 1]
+adsr_attack=@Variant(\0\0\0\x87\0\0\0\0)
+adsr_decay=@Variant(\0\0\0\x87>\x8a\xa3\x33)
+adsr_kbd_repeat=true
+adsr_kbd_trigger=true
+adsr_release=@Variant(\0\0\0\x87\0\0\0\0)
+adsr_sustain=@Variant(\0\0\0\x87?\x13\x31\x9a)
+ar_attack=@Variant(\0\0\0\x87\0\0\0\0)
+ar_kbd_trigger=true
+ar_release=@Variant(\0\0\0\x87\0\0\0\0)
+hpf_cutoff=@Variant(\0\0\0\x87\0\0\0\0)
+kbd_portamento=@Variant(\0\0\0\x87>\x1a)\x9a)
+kbd_transpose=@Variant(\0\0\0\x87\0\0\0\0)
+lfo_freq=@Variant(\0\0\0\x87?g\xc8\xe5)
+mix_noise=false
+mix_noise_ring=@Variant(\0\0\0\x87\0\0\0\0)
+mix_vco1=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco1_saw=false
+mix_vco2=@Variant(\0\0\0\x87?\x80\0\0)
+mix_vco2_saw=false
+noise_white=false
+sh_lag=@Variant(\0\0\0\x87\0\0\0\0)
+sh_lfo_trigger=true
+sh_noise=@Variant(\0\0\0\x87\0\0\0\0)
+sh_noise_gen=true
+sh_vco1=@Variant(\0\0\0\x87\0\0\0\0)
+sh_vco1_saw=true
+vca_env=@Variant(\0\0\0\x87@\xe9J\0)
+vca_env_ar=true
+vca_gain=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_cutoff=@Variant(\0\0\0\x87\x45\x87\tI)
+vcf_env=@Variant(\0\0\0\x87?\x80\0\0)
+vcf_env_adsr=true
+vcf_mod1=@Variant(\0\0\0\x87\0\0\0\0)
+vcf_mod1_kbd=false
+vcf_mod2=@Variant(\0\0\0\x87?\0\x89\x9a)
+vcf_mod2_sh=false
+vcf_reso=@Variant(\0\0\0\x87?\xe2\a\xc5)
+vco1_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm1_is_lfo_sine=true
+vco1_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco1_fm2_is_sh_out=true
+vco1_kbd=true
+vco1_pw=@Variant(\0\0\0\x87>G \0)
+vco1_pwm=@Variant(\0\0\0\x87>\xf2i\x9a)
+vco1_pwm_is_lfo=true
+vco1_tune=@Variant(\0\0\0\x87?\x80\0\0)
+vco2_detune=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm1_is_lfo_sine=true
+vco2_fm2=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_fm2_is_sh_out=true
+vco2_pw=@Variant(\0\0\0\x87>\xce\x36\x66)
+vco2_pwm=@Variant(\0\0\0\x87\0\0\0\0)
+vco2_pwm_is_lfo=true
+vco2_sync=false
+vco2_tune=@Variant(\0\0\0\x87?\x80\0\0)
+
 [Smooth]
 adsr_attack="@Variant(\0\0\0\x87=\x1e\x80\0)"
 adsr_decay="@Variant(\0\0\0\x87=\xcc\xcc\xcd)"
